Bug 96637 - Default signing certificate no longer highlighted
Summary: Default signing certificate no longer highlighted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.0.2
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-12-21 08:59 UTC by Miklos Vajna
Modified: 2016-10-25 19:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
How it looks like currently (47.88 KB, image/png)
2015-12-21 09:00 UTC, Miklos Vajna
Details
How it looked like in the past (47.48 KB, image/png)
2015-12-21 09:00 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-12-21 08:59:48 UTC
Steps to reproduce:

1) Set up at least one document signing certificate
2) Go to File -> Digital signatures -> Sign document

Expected: the first entry in the table is highlighted.

Actual: there is a frame around the first entry, but it's not highlighted, and even clicking on the entry doesn't highlight it, either.

Workaround is to double-click on it: that will select the certificate and close the dialog as well.
Comment 1 Miklos Vajna 2015-12-21 09:00:12 UTC
Created attachment 121463 [details]
How it looks like currently
Comment 2 Miklos Vajna 2015-12-21 09:00:28 UTC
Created attachment 121464 [details]
How it looked like in the past
Comment 3 Miklos Vajna 2015-12-21 09:03:01 UTC
git bisect says:
 87199d3829257420429057336283c55be6ae7481 is the first bad commit
commit 87199d3829257420429057336283c55be6ae7481
Author: Michael Meeks <michael.meeks@collabora.com>
Date:   Tue Nov 24 16:59:29 2015 +0000

    vcl: re-introduce idle handling.
    
    The idea here is that we should process 'idle' events - like re-paint
    after we have processed any OS messages - such as key/mouse input,
    window re-size events etc.
    
    The previous approach wasn't achieving this - it was processing a single
    idle event each time around the main-loop iteration; urk.
    
    Lubos implemented something -like- this, the vestiges of it need cleaning
    up and removing in: 06d731428ef6cf93c7333e8228bfb6088853b52f but it was
    disabled (most likely because it broke gtk in tdf#91727, which was itself
    broken by using silly values for timeouts in the scheduler (now fixed))
    
    Tested on Windows, gtk, kde4, unx-generic.
    
    Change-Id: I7756bca874779c00f72b372cacb7745d0f189f66
    Reviewed-on: https://gerrit.libreoffice.org/20158
    Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
    Tested-by: Michael Meeks <michael.meeks@collabora.com>

:040000 040000 09330af0cd5352a2dfdbc378cd008748e7fe588f bf4094215894ace2d915bdc367b84aeccaa29cc6 M      include
:040000 040000 697155cdb98af5a5d1fbbb69270efb05bdc87438 c0add09cbb911a274766737a96249d39c6f0dbf4 M      vcl

(Note: if you plan to build the commit right before it, you need to cherry-pick5470a365f25e5052b4dd74f76aa2196f0d70934b locally, otherwise soffice will crash on startup, which is an independent problem...)

So probably the highlight painting of SvImpLBox or some related class is done with a low enough priority, so that it never gets executed or something?
Comment 4 Commit Notification 2015-12-21 13:59:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=171ca32e02976022858b9f0affb532a35c495833

tdf#96637 svtools: fix missing highlight of selected entry in list box

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-12-23 16:23:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad70b07e728c726e50a909d06b057072e7a0f1f3&h=libreoffice-5-1

tdf#96637 svtools: fix missing highlight of selected entry in list box

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.