tdf#96637 svtools: fix missing highlight of selected entry in list box

Regression from 87199d3829257420429057336283c55be6ae7481 (vcl:
re-introduce idle handling., 2015-11-24), this probably worked
previously as the idle repaint triggered SvImpLBox::Paint() multiple (at
least two) times, so in the first run it could mark the first entry in
the list box as selected/highlighted, and then the second run it could
paint accordingly.

Now it's called only once, so it's required that selecting the first
entry happens before the actual painting.

With this, the certificate selection dialog has the default signing
certificate pre-selected again.

(cherry picked from commit 171ca32e02976022858b9f0affb532a35c495833)

Change-Id: I0546bf673f44f4270e36b9bbf02bb723f23d6160